--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
-</head>
 
 <body class="body">
     <header class="header center">
@@ -21,85 +20,166 @@
             <h1 class="header__title">Добро пожаловать <br> на мой сайт мини-игр</h1>
             <h2 class="header__subtitle">Тебе предстоит пройти несколько увлекательных игр. <br> Если готов, нажимай
                 «Поехали!» и приступай.</h2>
-                <a class="header__link" href="#about-games">
-            <button class="header__btn">Поехали!</button>
-        </a>
+            <a class="header__link" href="#about-games">
+                <form>
+                    <button class="header__link-btn">Поехали!</button>
+                </form>
+            </a>
         </section>
     </header>
-    <div class="scroll-bar">   
+    <div class="scroll-bar">
     </div>
     <div class="info center" id="about-games">
-        <h1 class="info__main-title">Об играх</h1>
-        <h2 class="info__main-subtitle">В моей коллекции представлено 6 игр на разные темы. <br>Игры несложные — в них может поиграть каждый. <br>
-            Все игры доступны для пользования.</h2>
-        <section class="games-box center">
+        <h2 class="info__main-title">Об играх</h2>
+        <h3 class="info__main-subtitle">В моей коллекции представлено 6 игр на разные темы. <br>Игры несложные — в них
+            может поиграть каждый. <br>
+            Все игры доступны для пользования.</h3>
+        <div class="games-box center">
             <div class="games-box__grid">
                 <div class="games-box__column">
                     <a class="games-box__link" href="#">
-            <article class="games-box__product small">
-                <img class="games-box__img" src="img/img1.png" alt="img">
-                <div class="games-box__section">
-                <p class="games-box__title">Игра № 1</p>
-                <h3 class="games-box__subtitle">Угадай число</h3>
+                        <article class="games-box__product small">
+                            <img class="games-box__img" src="img/img1.png" alt="img">
+                            <div class="games-box__section">
+                                <p class="games-box__title">Игра № 1</p>
+                                <h3 class="games-box__subtitle">Угадай число</h3>
+                            </div>
+                        </article>
+                    </a>
+                    <a class="games-box__link" href="#">
+                        <article class="games-box__product big-big">
+                            <img class="games-box__img" src="img/img4.png" alt="img">
+                            <div class="games-box__section">
+                                <p class="games-box__title">Игра № 4</p>
+                                <h3 class="games-box__subtitle">Камень,<br>ножницы,<br>бумага</h3>
+                            </div>
+                        </article>
+                    </a>
                 </div>
-            </article>
-            </a>
-            <a class="games-box__link" href="#">
-                <article class="games-box__product big-big">
-                    <img class="games-box__img" src="img/img4.png" alt="img">
-                    <div class="games-box__section">
-                    <p class="games-box__title">Игра № 4</p>
-                    <h3 class="games-box__subtitle">Камень,<br>ножницы,<br>бумага</h3>
-                    </div>
-                </article>
-            </a>
-        </div>
-        <div class="games-box__column">
-            <a class="games-box__link" href="#">
-                <article class="games-box__product big">
-                    <img class="games-box__img" src="img/img2.png" alt="img">
-                    <div class="games-box__section">
-                    <p class="games-box__title">Игра № 2</p>
-                    <h3 class="games-box__subtitle">Простая <br> арифметика</h3>
-                    </div>
-                </article>
-            </a>
-            <div class="games-box__flex">
-                <a class="games-box__link" href="#">
-                    <article class="games-box__product big">
-                        <img class="games-box__img" src="img/img5.png" alt="img">
-                        <div class="games-box__section">
-                        <p class="games-box__title">Игра № 5</p>
-                        <h3 class="games-box__subtitle">Простая <br> викторина</h3>
-                        </div>
-                    </article>
-                </a>
-        </div>
-        </div>
-        <div class="games-box__column">
-            <a class="games-box__link" href="#">
-                <article class="games-box__product small">
-                    <img class="games-box__img" src="img/img3.png" alt="img">
-                    <div class="games-box__section">
-                    <p class="games-box__title">Игра № 3</p>
-                    <h3 class="games-box__subtitle">Переверни текст</h3>
-                    </div>
-                </article>
-            </a>
-            <a class="games-box__link" href="#">
-            <article class="games-box__product big-big">
-                <img class="games-box__img" src="img/img6.png" alt="img">
-                <div class="games-box__section">
-                <p class="games-box__title">Игра № 6</p>
-                <h3 class="games-box__subtitle">Генератор <br> случайных <br> цветов</h3>
+                <div class="games-box__column">
+                    <a class="games-box__link" href="#">
+                        <article class="games-box__product big">
+                            <img class="games-box__img" src="img/img2.png" alt="img">
+                            <div class="games-box__section">
+                                <p class="games-box__title">Игра № 2</p>
+                                <h3 class="games-box__subtitle">Простая <br> арифметика</h3>
+                            </div>
+                        </article>
+                    </a>
+                    <a class="games-box__link" href="#">
+                        <article class="games-box__product big">
+                            <img class="games-box__img" src="img/img5.png" alt="img">
+                            <div class="games-box__section">
+                                <p class="games-box__title">Игра № 5</p>
+                                <h3 class="games-box__subtitle">Простая <br> викторина</h3>
+                            </div>
+                        </article>
+                    </a>
                 </div>
-            </article>
-        </a>
+                <div class="games-box__column">
+                    <a class="games-box__link" href="#">
+                        <article class="games-box__product small">
+                            <img class="games-box__img" src="img/img3.png" alt="img">
+                            <div class="games-box__section">
+                                <p class="games-box__title">Игра № 3</p>
+                                <h3 class="games-box__subtitle">Переверни текст</h3>
+                            </div>
+                        </article>
+                    </a>
+                    <a class="games-box__link" href="#">
+                        <article class="games-box__product big-big">
+                            <img class="games-box__img" src="img/img6.png" alt="img">
+                            <div class="games-box__section">
+                                <p class="games-box__title">Игра № 6</p>
+                                <h3 class="games-box__subtitle">Генератор <br> случайных <br> цветов</h3>
+                            </div>
+                        </article>
+                    </a>
+                </div>
             </div>
-            </div>
-            </div>
-        </section>
+        </div>
     </div>
+    <section class="game-play center">
+        <h2 class="game-play__title">Мини-игры</h2>
+        <div class="game-play__flex">
+            <a class="game-play__link" href="#">
+        <article class="game-play__product">
+            <div class="game-play__box">
+                <h3 class="game-play__subtitle">Угадай число</h3>
+                <p class="game-play__text">Попробуй угадать случайное <br> число от 1 до 100.</p>
+                <a class="game-play__link-btn" href="#">
+                    <button class="game-play__btn">Играть!</button>
+                </a>
+            </div>
+            <img class="game-play__img" src="img/game1.png" alt="Game-1">
+        </article>
+        </a>
+        <a class="game-play__link" href="#">
+        <article class="game-play__product">
+            <img class="game-play__img" src="img/game2.png" alt="Game-2">
+            <div class="game-play__box">
+                <h3 class="game-play__subtitle">Простая арифметика</h3>
+                <p class="game-play__text">Попробуй решить простые арифметические задачи.</p>
+                <a class="game-play__link" href="#">
+                    <button class="game-play__btn">Играть!</button>
+                </a>
+            </div>
+        </article>
+        </a>
+        <a class="game-play__link" href="#">
+        <article class="game-play__product">
+            <div class="game-play__box">
+                <h3 class="game-play__subtitle">Переверни текст</h3>
+                <p class="game-play__text">Попробуй ввести текст, который <br> будет перевернут.</p>
+                <a class="game-play__link" href="#">
+                    <button class="game-play__btn">Играть!</button>
+                </a>
+            </div>
+            <img class="game-play__img" src="img/game3.png" alt="Game-3">
+        </article>
+    </a>
+        <a class="game-play__link" href="#">
+        <article class="game-play__product">
+            <img class="game-play__img" src="img/game4.png" alt="Game-4">
+            <div class="game-play__box">
+                <h3 class="game-play__subtitle">Викторина</h3>
+                <p class="game-play__text">Отвечай на вопросы викторины <br> с вариантами ответов.</p>
+                <a class="game-play__link" href="#">
+                    <button class="game-play__btn">Играть!</button>
+                </a>
+            </div>
+        </article>
+    </a>
+        <a class="game-play__link" href="#">
+        <article class="game-play__product">
+            <div class="game-play__box">
+                <h3 class="game-play__subtitle">Камень, <br> ножницы, <br> бумага</h3>
+                <p class="game-play__text">Сыграй в популярную игру <br> против компьютера.</p>
+                <a class="game-play__link" href="#">
+                    <button class="game-play__btn">Играть!</button>
+                </a>
+            </div>
+            <img class="game-play__img" src="img/game5.png" alt="Game-5">
+        </article>
+    </a>
+        <a class="game-play__link" href="#">
+        <article class="game-play__product margin">
+            <img class="game-play__img" src="img/game6.png" alt="Game-6">
+            <div class="game-play__box">
+                <h3 class="game-play__subtitle">Генератор <br> случайных <br> цветов</h3>
+                <p class="game-play__text">Игра, в которой при клике на кнопку <br> фон страницы меняется на случайный.</p>
+                <a class="game-play__link" href="#">
+                    <button class="game-play__btn">Играть!</button>
+                </a>
+            </div>
+        </article>
+        </a>
+        </div>
+    </section>
+    <footer class="footer">
+        <h2 class="footer__text">Все права защищены.</h2>
+    </footer>
+
 
 </body>
 
