Начал работать над мобилкой

--- a/index.html
+++ b/index.html
@@ -19,12 +19,15 @@
         <section class="header__content">
             <h1 class="header__title">Добро пожаловать <br> на мой сайт мини-игр</h1>
             <h2 class="header__subtitle">Тебе предстоит пройти несколько увлекательных игр. <br> Если готов, нажимай
-                «Поехали!» и приступай.</h2>
+                <b>«Поехали!»</b> и <b>приступай</b>.
+            </h2>
+            <div class="header__box">
             <a class="header__link" href="#about-games">
                 <form>
                     <button class="header__link-btn">Поехали!</button>
                 </form>
             </a>
+        </div>
         </section>
     </header>
     <div class="scroll-bar">
@@ -99,83 +102,95 @@
             </div>
         </div>
     </div>
-    <section class="game-play center">
-        <h2 class="game-play__title">Мини-игры</h2>
-        <div class="game-play__flex">
-            <a class="game-play__link" href="#">
-        <article class="game-play__product">
-            <div class="game-play__box">
-                <h3 class="game-play__subtitle">Угадай число</h3>
-                <p class="game-play__text">Попробуй угадать случайное <br> число от 1 до 100.</p>
-                <a class="game-play__link-btn" href="#">
-                    <button class="game-play__btn">Играть!</button>
-                </a>
+    <div class="img-mini-top">
+        <div class="img-big-top">
+            <div class="img-mini-bottom">
+                <div class="img-big-bottom">
+                    <section class="game-play center">
+                        <h2 class="game-play__title">Мини-игры</h2>
+                        <div class="game-play__flex">
+                            <article class="game-play__product">
+                                <a class="game-play__link" href="#">
+                                    <div class="game-play__box">
+                                        <h3 class="game-play__subtitle">Угадай число</h3>
+                                        <p class="game-play__text">Попробуй угадать случайное <br> число от 1 до 100.
+                                        </p>
+                                        <a class="game-play__link-btn" href="#">
+                                            <button class="game-play__btn">Играть!</button>
+                                        </a>
+                                    </div>
+                                    <img class="game-play__img" src="img/game1.png" alt="Game-1">
+                            </article>
+                            </a>
+                            <article class="game-play__product">
+                                <a class="game-play__link" href="#">
+                                    <img class="game-play__img" src="img/game2.png" alt="Game-2">
+                                    <div class="game-play__box">
+                                        <h3 class="game-play__subtitle">Простая <br> арифметика</h3>
+                                        <p class="game-play__text">Попробуй решить простые <br> арифметические задачи.</p>
+                                        <a class="game-play__link" href="#">
+                                            <button class="game-play__btn">Играть!</button>
+                                        </a>
+                                    </div>
+                            </article>
+                            </a>
+                            <article class="game-play__product">
+                                <a class="game-play__link" href="#">
+                                    <div class="game-play__box">
+                                        <h3 class="game-play__subtitle">Переверни текст</h3>
+                                        <p class="game-play__text">Попробуй ввести текст, который <br> будет перевернут.
+                                        </p>
+                                        <a class="game-play__link" href="#">
+                                            <button class="game-play__btn">Играть!</button>
+                                        </a>
+                                    </div>
+                                    <img class="game-play__img" src="img/game3.png" alt="Game-3">
+                            </article>
+                            </a>
+                            <article class="game-play__product">
+                                <a class="game-play__link" href="#">
+                                    <img class="game-play__img" src="img/game4.png" alt="Game-4">
+                                    <div class="game-play__box">
+                                        <h3 class="game-play__subtitle">Викторина</h3>
+                                        <p class="game-play__text">Отвечай на вопросы викторины <br> с вариантами
+                                            ответов.</p>
+                                        <a class="game-play__link" href="#">
+                                            <button class="game-play__btn">Играть!</button>
+                                        </a>
+                                    </div>
+                            </article>
+                            </a>
+                            <article class="game-play__product">
+                                <a class="game-play__link" href="#">
+                                    <div class="game-play__box">
+                                        <h3 class="game-play__subtitle">Камень, <br> ножницы, <br> бумага</h3>
+                                        <p class="game-play__text">Сыграй в популярную игру <br> против компьютера.</p>
+                                        <a class="game-play__link" href="#">
+                                            <button class="game-play__btn">Играть!</button>
+                                        </a>
+                                    </div>
+                                    <img class="game-play__img" src="img/game5.png" alt="Game-5">
+                            </article>
+                            </a>
+                            <article class="game-play__product margin">
+                                <a class="game-play__link" href="#">
+                                    <img class="game-play__img" src="img/game6.png" alt="Game-6">
+                                    <div class="game-play__box">
+                                        <h3 class="game-play__subtitle">Генератор <br> случайных <br> цветов</h3>
+                                        <p class="game-play__text">Игра, в которой при клике на кнопку <br> фон страницы
+                                            меняется на случайный.</p>
+                                        <a class="game-play__link" href="#">
+                                            <button class="game-play__btn">Играть!</button>
+                                        </a>
+                                    </div>
+                            </article>
+                            </a>
+                        </div>
+                    </section>
+                </div>
             </div>
-            <img class="game-play__img" src="img/game1.png" alt="Game-1">
-        </article>
-        </a>
-        <a class="game-play__link" href="#">
-        <article class="game-play__product">
-            <img class="game-play__img" src="img/game2.png" alt="Game-2">
-            <div class="game-play__box">
-                <h3 class="game-play__subtitle">Простая арифметика</h3>
-                <p class="game-play__text">Попробуй решить простые арифметические задачи.</p>
-                <a class="game-play__link" href="#">
-                    <button class="game-play__btn">Играть!</button>
-                </a>
-            </div>
-        </article>
-        </a>
-        <a class="game-play__link" href="#">
-        <article class="game-play__product">
-            <div class="game-play__box">
-                <h3 class="game-play__subtitle">Переверни текст</h3>
-                <p class="game-play__text">Попробуй ввести текст, который <br> будет перевернут.</p>
-                <a class="game-play__link" href="#">
-                    <button class="game-play__btn">Играть!</button>
-                </a>
-            </div>
-            <img class="game-play__img" src="img/game3.png" alt="Game-3">
-        </article>
-    </a>
-        <a class="game-play__link" href="#">
-        <article class="game-play__product">
-            <img class="game-play__img" src="img/game4.png" alt="Game-4">
-            <div class="game-play__box">
-                <h3 class="game-play__subtitle">Викторина</h3>
-                <p class="game-play__text">Отвечай на вопросы викторины <br> с вариантами ответов.</p>
-                <a class="game-play__link" href="#">
-                    <button class="game-play__btn">Играть!</button>
-                </a>
-            </div>
-        </article>
-    </a>
-        <a class="game-play__link" href="#">
-        <article class="game-play__product">
-            <div class="game-play__box">
-                <h3 class="game-play__subtitle">Камень, <br> ножницы, <br> бумага</h3>
-                <p class="game-play__text">Сыграй в популярную игру <br> против компьютера.</p>
-                <a class="game-play__link" href="#">
-                    <button class="game-play__btn">Играть!</button>
-                </a>
-            </div>
-            <img class="game-play__img" src="img/game5.png" alt="Game-5">
-        </article>
-    </a>
-        <a class="game-play__link" href="#">
-        <article class="game-play__product margin">
-            <img class="game-play__img" src="img/game6.png" alt="Game-6">
-            <div class="game-play__box">
-                <h3 class="game-play__subtitle">Генератор <br> случайных <br> цветов</h3>
-                <p class="game-play__text">Игра, в которой при клике на кнопку <br> фон страницы меняется на случайный.</p>
-                <a class="game-play__link" href="#">
-                    <button class="game-play__btn">Играть!</button>
-                </a>
-            </div>
-        </article>
-        </a>
         </div>
-    </section>
+    </div>
     <footer class="footer">
         <h2 class="footer__text">Все права защищены.</h2>
     </footer>
