--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
             </h2>
             <div class="header__box">
                 <a class="header__link" href="#about-games">
-                    <form>
+                    <div class="header__link-block">
                         <button class="header__link-btn">Поехали!</button>
-                    </form>
+                    </div>
                 </a>
             </div>
         </section>
@@ -112,8 +112,8 @@
         <img class="game-play__mini-top-star" src="mini-star-top.svg" alt="star">
         <h2 class="game-play__title">Мини-игры</h2>
         <div class="game-play__flex">
-            <article class="game-play__product binding-big-top">
-                <a class="game-play__link" href="#">
+            <a class="game-play__link" href="#">
+                <article class="game-play__product binding-big-top">
                     <div class="game-play__box">
                         <h3 class="game-play__subtitle">Угадай число</h3>
                         <p class="game-play__text">Попробуй угадать случайное <br> число от 1 до 100.
@@ -123,10 +123,10 @@
                         </a>
                     </div>
                     <img class="game-play__img" src="img/game1.png" alt="Game-1">
-                </a>
-            </article>
-            <article class="game-play__product">
-                <a class="game-play__link" href="#">
+                </article>
+            </a>
+            <a class="game-play__link" href="#">
+                <article class="game-play__product">
                     <img class="game-play__img" src="img/game2.png" alt="Game-2">
                     <div class="game-play__box">
                         <h3 class="game-play__subtitle">Простая арифметика</h3>
@@ -135,11 +135,10 @@
                             <button class="game-play__btn">Играть!</button>
                         </a>
                     </div>
-
-                </a>
-            </article>
-            <article class="game-play__product">
-                <a class="game-play__link" href="#">
+                </article>
+            </a>
+            <a class="game-play__link" href="#">
+                <article class="game-play__product">
                     <div class="game-play__box">
                         <h3 class="game-play__subtitle">Переверни текст</h3>
                         <p class="game-play__text">Попробуй ввести текст, который <br> будет перевернут.
@@ -149,10 +148,10 @@
                         </a>
                     </div>
                     <img class="game-play__img" src="img/game3.png" alt="Game-3">
-            </article>
+                </article>
             </a>
-            <article class="game-play__product">
-                <a class="game-play__link" href="#">
+            <a class="game-play__link" href="#">
+                <article class="game-play__product">
                     <img class="game-play__img" src="img/game4.png" alt="Game-4">
                     <div class="game-play__box">
                         <h3 class="game-play__subtitle">Викторина</h3>
@@ -162,10 +161,10 @@
                             <button class="game-play__btn">Играть!</button>
                         </a>
                     </div>
-                </a>
-            </article>
-            <article class="game-play__product">
-                <a class="game-play__link" href="#">
+                </article>
+            </a>
+            <a class="game-play__link" href="#">
+                <article class="game-play__product">
                     <div class="game-play__box">
                         <h3 class="game-play__subtitle">Камень, <br> ножницы, <br> бумага</h3>
                         <p class="game-play__text">Сыграй в популярную игру <br> против компьютера.</p>
@@ -174,10 +173,10 @@
                         </a>
                     </div>
                     <img class="game-play__img" src="img/game5.png" alt="Game-5">
-            </article>
+                </article>
             </a>
-            <article class="game-play__product margin">
-                <a class="game-play__link" href="#">
+            <a class="game-play__link" href="#">
+                <article class="game-play__product margin">
                     <img class="game-play__img" src="img/game6.png" alt="Game-6">
                     <div class="game-play__box">
                         <h3 class="game-play__subtitle">Генератор <br> случайных <br> цветов</h3>
@@ -187,17 +186,19 @@
                             <button class="game-play__btn">Играть!</button>
                         </a>
                     </div>
-            </article>
+                </article>
             </a>
         </div>
     </section>
     <footer class="footer">
-        <img class="footer__mini-bottom-star" src="mini-star-bottom.svg" alt="star">
-        <img class="footer__big-bottom-star" src="big-star-bottom.svg" alt="star">
+        <div class="footer__box-star">
+            <img class="footer__mini-bottom-star" src="mini-star-bottom.svg" alt="star">
+            <img class="footer__big-bottom-star" src="big-star-bottom.svg" alt="star">
+        </div>
         <h2 class="footer__text">Все права защищены.</h2>
     </footer>
 
-
+    <script src="script.js"></script>
 </body>
 
 </html>
