--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
             </div>
         </section>
     </header>
-    <div class="scroll-bar">
-    </div>
+    <div class="scroll-bar"></div>
     <div class="info center" id="about-games">
         <h2 class="info__main-title">Об играх</h2>
         <h3 class="info__main-subtitle">В моей коллекции представлено 6 игр на разные темы. <br>Игры несложные — в них
@@ -45,7 +44,7 @@
         <div class="games-box center">
             <div class="games-box__grid">
                 <div class="games-box__column">
-                    <a class="games-box__link" href="#">
+                    <a class="games-box__link" href="#game-one">
                         <article class="games-box__product small">
                             <img class="games-box__img" src="img/img1.png" alt="img">
                             <div class="games-box__section">
@@ -54,7 +53,7 @@
                             </div>
                         </article>
                     </a>
-                    <a class="games-box__link" href="#">
+                    <a class="games-box__link" href="#game-for">
                         <article class="games-box__product big-big">
                             <img class="games-box__img" src="img/img4.png" alt="img">
                             <div class="games-box__section">
@@ -65,7 +64,7 @@
                     </a>
                 </div>
                 <div class="games-box__column">
-                    <a class="games-box__link" href="#">
+                    <a class="games-box__link" href="#game-two">
                         <article class="games-box__product big">
                             <img class="games-box__img" src="img/img2.png" alt="img">
                             <div class="games-box__section">
@@ -74,7 +73,7 @@
                             </div>
                         </article>
                     </a>
-                    <a class="games-box__link" href="#">
+                    <a class="games-box__link" href="#game-five">
                         <article class="games-box__product big">
                             <img class="games-box__img" src="img/img5.png" alt="img">
                             <div class="games-box__section">
@@ -85,7 +84,7 @@
                     </a>
                 </div>
                 <div class="games-box__column">
-                    <a class="games-box__link" href="#">
+                    <a class="games-box__link" href="#game-tree">
                         <article class="games-box__product small">
                             <img class="games-box__img" src="img/img3.png" alt="img">
                             <div class="games-box__section">
@@ -94,7 +93,7 @@
                             </div>
                         </article>
                     </a>
-                    <a class="games-box__link" href="#">
+                    <a class="games-box__link" href="#game-six">
                         <article class="games-box__product big-big">
                             <img class="games-box__img" src="img/img6.png" alt="img">
                             <div class="games-box__section">
@@ -112,7 +111,7 @@
         <img class="game-play__mini-top-star" src="mini-star-top.svg" alt="star">
         <h2 class="game-play__title">Мини-игры</h2>
         <div class="game-play__flex">
-                <article class="game-play__product binding-big-top">
+                <article class="game-play__product binding-big-top" id="game-one">
                     <a class="game-play__link" href="#">
                     <div class="game-play__box">
                         <h3 class="game-play__subtitle">Угадай число</h3>
@@ -125,7 +124,7 @@
                     <img class="game-play__img" src="img/game1.png" alt="Game-1">
                 </a>
                 </article>
-                <article class="game-play__product">
+                <article class="game-play__product" id="game-two">
                     <a class="game-play__link" href="#">
                     <img class="game-play__img" src="img/game2.png" alt="Game-2">
                     <div class="game-play__box">
@@ -137,7 +136,7 @@
                     </div>
                 </a>
                 </article>
-                <article class="game-play__product">
+                <article class="game-play__product" id="game-tree">
                     <a class="game-play__link" href="#">
                     <div class="game-play__box">
                         <h3 class="game-play__subtitle">Переверни текст</h3>
@@ -150,7 +149,7 @@
                     <img class="game-play__img" src="img/game3.png" alt="Game-3">
                 </a>
                 </article>
-                <article class="game-play__product">
+                <article class="game-play__product" id="game-five">
                     <a class="game-play__link" href="#">
                     <img class="game-play__img" src="img/game4.png" alt="Game-4">
                     <div class="game-play__box">
@@ -163,7 +162,7 @@
                     </div>
                 </a>
                 </article>
-                <article class="game-play__product">
+                <article class="game-play__product" id="game-for">
                     <a class="game-play__link" href="#">
                     <div class="game-play__box">
                         <h3 class="game-play__subtitle">Камень, <br> ножницы, <br> бумага</h3>
@@ -175,7 +174,7 @@
                     <img class="game-play__img" src="img/game5.png" alt="Game-5">
                 </a>
                 </article>
-                <article class="game-play__product margin">
+                <article class="game-play__product margin" id="game-six">
                     <a class="game-play__link" href="#">
                     <img class="game-play__img" src="img/game6.png" alt="Game-6">
                     <div class="game-play__box">
